refactor: cleanup deprecated stuff (#4451)